UPDATE reorganize docs and fix inspection warnings